--- a/elements/index_variante_1.html
+++ b/elements/index_variante_1.html
@@ -412,7 +412,7 @@ body {
   "range_stop": 999,
   "text": "Auffällig in Bezug auf Persönlichkeitsverändungen",
   "color": "#9C27B0"
-}]' scores="[[survey_responses]]" clinic_sample_dive='[5, 2, 4]' clinic_samples='__opapp_include(includes/ks_current.json)'>
+}]' scores="[[survey_responses]]" clinic_sample_dive='[5, 2, 4]' clinic_samples='__opapp_include(../includes/ks_current.json)'>
                 </optinomic-chart-profile>
             </template>
         </div>
